--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
 @theme {
-  --color-background: #DCDCDC;
+  --color-background: #F0F0F0;
   --color-foreground: #131313;
   --color-card-dark: #0C0C0C;
-  --color-brand-orange: #FF5E00;
+  --color-brand-orange: #FF5200;
 
   --font-cal: "Cal Sans", sans-serif;
   --font-inter: "Inter", sans-serif;
